# Project_2

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BadStringAutomaton.cpp  BadStringAutomaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rule.cpp  Rule.h  (+9 more)
Test Files/: test0
